♻️ refactor RNE to use pouvoirs for dirigeant certification (#1569)
